Cambios en homeTecnico

--- a/src/main/resources/templates/recepcion/homeRecepcion.html
+++ b/src/main/resources/templates/recepcion/homeRecepcion.html
@@ -181,7 +181,7 @@
 
             <div class="derecha">
                 <div class="card border h-350 center">
-                    <!-- Grupo: Alta Cliente -->
+                    <!-- Grupo: Perfil -->
                     <div class="contenedor-tarjeta">
                         <div class="card border mr30">
                             <a th:href="@{/recepcion/perfilRecepcion}">
