--- a/src/main/resources/templates/tecnico/homeTecnico.html
+++ b/src/main/resources/templates/tecnico/homeTecnico.html
@@ -32,7 +32,7 @@
 
             <div class="card border">
                 <div class="centro card border mr15" style="padding: 10px;">
-                    <h1>Recepción</h1>
+                    <h1>Home Técnico</h1>
                     <h3 th:text="'Welcome, ' + ${usuario.nombre + ' ' + usuario.apellido}"></h3>
                 </div>
             </div>
@@ -140,7 +140,7 @@
                             <div class="card border mr15">
                                 <br>
                                 <h3 class="center">Clientes Registrados</h3>
-                                <h1 class="center" th:text="${cantidadClientes}"></h1>
+                                <!-- <h1 class="center" th:text="${cantidadClientes}"></h1> -->
                             </div>
                         </div>
                     </div>
@@ -150,7 +150,7 @@
                             <div class="card border mr15">
                                 <br>
                                 <h3 class="center">Ordenes Pendientes</h3>
-                                <h1 class="center" th:text="${ordenConteo.get('PENDIENTE')}"></h1>
+                                <!-- <h1 class="center" th:text="${ordenConteo.get('PENDIENTE')}"></h1> -->
                             </div>
                         </div>
                     </div>
@@ -162,7 +162,7 @@
                             <div class="card border mr15">
                                 <br>
                                 <h3 class="center">Ordenes x Avisar</h3>
-                                <h1 class="center" th:text="${ordenAviso.get('NO')}"></h1>
+                                <!-- <h1 class="center" th:text="${ordenAviso.get('NO')}"></h1> -->
                             </div>
                         </div>
                     </div>
@@ -172,7 +172,7 @@
                             <div class="card border mr15">
                                 <br>
                                 <h3 class="center">Ordenes en Curso</h3>
-                                <h1 class="center" th:text="${ordenConteo.get('EN_CURSO')}"></h1>
+                                <!-- <h1 class="center" th:text="${ordenConteo.get('EN_CURSO')}"></h1> -->
                             </div>
                         </div>
                     </div>
