--- a/src/main/resources/templates/tecnico/homeTecnico.html
+++ b/src/main/resources/templates/tecnico/homeTecnico.html
@@ -15,7 +15,7 @@
 <body>
 
     <!-- Header -->
-    <div th:insert="~{recepcion/templateRecepcion.html::header-recepcion}" th:unless="${sesion==null}"></div>
+    <div th:insert="~{tecnico/templateTecnico.html::header-tecnico}" th:unless="${sesion==null}"></div>
 
     <!-- Main -->
     <main>
@@ -64,33 +64,7 @@
         <div class="contenedor-dashboard">
             <div class="izquierda">
                 <ul class="dropdown-menu card border">
-
-                    <li class="center">
-                        <div class="card border mrt-5 w90 center">
-                            <a class="black dos-columnas-menu" th:href="@{/recepcion/altaCliente}">
-                                <div class="center">
-                                    <img class="w20" th:src="@{/iconos/agregar-cliente.png}" alt="altaCliente">
-                                </div>
-                                <div class="mrt-10">
-                                    <p class="tf-14">Alta Cliente</p>
-                                </div>
-                            </a>
-                        </div>
-                    </li>
-
-                    <li class="center">
-                        <div class="card border mrt-5 w90 center">
-                            <a class="black dos-columnas-menu" th:href="@{/recepcion/clientes}">
-                                <div class="center">
-                                    <img class="w20" th:src="@{/iconos/grupo5-negro.png}" alt="grupo5-negro">
-                                </div>
-                                <div class="mrt-10">
-                                    <p class="tf-14">Clientes</p>
-                                </div>
-                            </a>
-                        </div>
-                    </li>
-
+                   
                     <li class="center">
                         <div class="card border mrt-5 w90 center">
                             <a class="black dos-columnas-menu" th:href="@{/equipo/equipos}">
@@ -135,16 +109,7 @@
 
             <div class="centro">
                 <div class="spac-around">
-                    <div class="contenedor-tarjeta-estirada">
-                        <div class="card border">
-                            <div class="card border mr15">
-                                <br>
-                                <h3 class="center">Clientes Registrados</h3>
-                                <!-- <h1 class="center" th:text="${cantidadClientes}"></h1> -->
-                            </div>
-                        </div>
-                    </div>
-
+                   
                     <div class="contenedor-tarjeta-estirada">
                         <div class="card border">
                             <div class="card border mr15">
@@ -154,20 +119,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="spac-around">
-                    <div class="contenedor-tarjeta-estirada justify-end">
-                        <div class="card border">
-                            <div class="card border mr15">
-                                <br>
-                                <h3 class="center">Ordenes x Avisar</h3>
-                                <!-- <h1 class="center" th:text="${ordenAviso.get('NO')}"></h1> -->
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="contenedor-tarjeta-estirada justify-end">
+                    <div class="contenedor-tarjeta-estirada">
                         <div class="card border">
                             <div class="card border mr15">
                                 <br>
@@ -202,7 +155,7 @@
     <br><br>
 
     <!-- Footer -->
-    <div th:insert="~{recepcion/templateRecepcion.html::footer-recepcion}"></div>
+    <div th:insert="~{tecnico/templateTecnico.html::footer-tecnico}"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
