--- a/src/main/resources/templates/tecnico/homeTecnico.html
+++ b/src/main/resources/templates/tecnico/homeTecnico.html
@@ -137,7 +137,7 @@
                     <!-- Grupo: Alta Cliente -->
                     <div class="contenedor-tarjeta">
                         <div class="card border mr30">
-                            <a th:href="@{/recepcion/perfilRecepcion}">
+                            <a th:href="@{/tecnico/perfilTecnico}">
                                 <div class="card border mr15">
                                     <img class="img-card mr30" src="/iconos/usuario.png" alt="usuario">
                                     <h5 class="center black">Ver Perfil</h5>
