Cambios en homeAdmin

--- a/src/main/resources/templates/administrador/perfilAdmin.html
+++ b/src/main/resources/templates/administrador/perfilAdmin.html
@@ -14,7 +14,7 @@
 <body>
 
     <!-- Header -->
-    <div th:insert="~{tecnico/templateTecnico.html::header-tecnico}" th:unless="${sesion==null}"></div>
+    <div th:insert="~{administrador/templateAdmin.html::header-Admin}" th:unless="${sesion==null}"></div>
 
     <main>
 
@@ -140,7 +140,7 @@
                 </div>
             </div>
             <div class="col-sm-12 center mrt-30">
-                <a class="btn btn-secondary mr-30" th:href="@{/tecnico/homeTecnico}"><img class="w25"
+                <a class="btn btn-secondary mr-30" th:href="@{/administrador/homeAdmin}"><img class="w25"
                         th:src="@{/iconos/atras.png}" alt="atras"> Volver</a>
             </div>
         </div>
@@ -148,8 +148,7 @@
     </main>
 
     <!-- Footer -->
-    <div class="mrt-30" th:insert="~{tecnico/templateTecnico.html::footer-tecnico}"></div>
-
+    <div class="mrt-30" th:insert="~{administrador/templateAdmin.html::footer-admin}"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
