Modifico los links altaCliente, clientes, ordenes pendientes

--- a/src/main/resources/templates/administrador/homeAdmin.html
+++ b/src/main/resources/templates/administrador/homeAdmin.html
@@ -67,7 +67,7 @@
 
                     <li class="center">
                         <div class="card border mrt-5 w90 center">
-                            <a class="black dos-columnas-menu" th:href="@{/recepcion/altaCliente}">
+                            <a class="black dos-columnas-menu" th:href="@{/administrador/altaCliente}">
                                 <div class="center">
                                     <img class="w20" th:src="@{/iconos/agregar-cliente.png}" alt="altaCliente">
                                 </div>
@@ -80,7 +80,7 @@
 
                     <li class="center">
                         <div class="card border mrt-5 w90 center">
-                            <a class="black dos-columnas-menu" th:href="@{/recepcion/clientes}">
+                            <a class="black dos-columnas-menu" th:href="@{/administrador/clientes}">
                                 <div class="center">
                                     <img class="w20" th:src="@{/iconos/grupo5-negro.png}" alt="grupo5-negro">
                                 </div>
@@ -184,7 +184,7 @@
                     <!-- Grupo: Perfil -->
                     <div class="contenedor-tarjeta">
                         <div class="card border mr30">
-                            <a th:href="@{/recepcion/perfilRecepcion}">
+                            <a th:href="@{/administrador/perfilAdmin}">
                                 <div class="card border mr15">
                                     <img class="img-card mr30" src="/iconos/usuario.png" alt="usuario">
                                     <h5 class="center black">Ver Perfil</h5>
