Agrego tecnicos en menu lateral

--- a/src/main/resources/templates/administrador/homeAdmin.html
+++ b/src/main/resources/templates/administrador/homeAdmin.html
@@ -120,6 +120,20 @@
 
                     <li class="center">
                         <div class="card border mrt-5 w90 center">
+                            <a class="black dos-columnas-menu" th:href="@{/administrador/tecnicos}">
+                                <div class="center">
+                                    <img class="w20" th:src="@{/iconos/soporte-it.png}"
+                                        alt="soporte-it">
+                                </div>
+                                <div class="mrt-10">
+                                    <p class="tf-14">Técnicos</p>
+                                </div>
+                            </a>
+                        </div>
+                    </li>
+
+                    <li class="center">
+                        <div class="card border mrt-5 w90 center">
                             <a class="black dos-columnas-menu" th:href="@{/usuario/cerrar}">
                                 <div class="center">
                                     <img class="w20" th:src="@{/iconos/btn_power.png}" alt="usuario">
