Cambios en la imagen del usuario admin

--- a/src/main/resources/templates/administrador/homeAdmin.html
+++ b/src/main/resources/templates/administrador/homeAdmin.html
@@ -22,9 +22,9 @@
         <br>
         <div class="contenedor-dashboard">
             <div class="izquierda card border" style="margin-right: 10px;">
-                <div class="card border mr15">
+                <div class="mr15">
                     <div class="center">
-                        <img class="" style="width: 100px; height: 100px; border-radius: 5px;"
+                        <img class="border" style="width: 100px; height: 100px; border-radius: 5px;"
                             th:src="@{/images/{img} (img=${usuario.foto})}" alt="img">
                     </div>
                 </div>
@@ -64,7 +64,6 @@
         <div class="contenedor-dashboard">
             <div class="izquierda">
                 <ul class="dropdown-menu card border">
-
                     <li class="center">
                         <div class="card border mrt-5 w90 center">
                             <a class="black dos-columnas-menu" th:href="@{/administrador/altaCliente}">
