--- a/src/main/resources/templates/administrador/homeAdmin.html
+++ b/src/main/resources/templates/administrador/homeAdmin.html
@@ -20,11 +20,13 @@
     <!-- Main -->
     <main>
         <br>
+
+        <div class="container">
         <div class="contenedor-dashboard">
             <div class="izquierda card border" style="margin-right: 10px;">
                 <div class="mr15">
                     <div class="center">
-                        <img class="border" style="width: 100px; height: 100px; border-radius: 5px;"
+                        <img class="border" style="width: 100%; height: 100%; border-radius: 5px;"
                             th:src="@{/images/{img} (img=${usuario.foto})}" alt="img">
                     </div>
                 </div>
@@ -210,7 +212,7 @@
 
         </div>
 
-
+</div>
     </main>
     <br><br>
 
