--- a/src/main/resources/templates/usuario/iniciarSesion.html
+++ b/src/main/resources/templates/usuario/iniciarSesion.html
@@ -2,72 +2,79 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Recepción Equipos</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link th:href="@{/css/estilos.css}" rel="stylesheet">
+  <title>Recepción Equipos</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <link th:href="@{/css/estilos.css}" rel="stylesheet" />
 </head>
 
 <body>
+  <!-- Header -->
+  <div th:insert="~{usuario/templateUsuario.html::header-inicial}" th:if="${sesion==null}"></div>
 
-    <!-- Header -->
-    <div th:insert="~{usuario/templateUsuario.html::header-inicial}" th:if="${sesion==null}"></div>
+  <main>
+    <br>
 
-    <main>
-        <div class="contenedor-formulario">
+    <div class="container w50 card border">
+      <div class="contenedor-formulario">
+        <h1 class="mrt-30">Iniciar Sesión</h1>
 
-            <h1 class="mrt-30">Iniciar Sesión</h1>
-
-            <div class="contenedor-img-iniciarSesion">
-                <img class="img-iniciarSesion" th:src="@{/imagenes/iniciarSesion.png}" alt="login">
-            </div>
-
-            <div class="contenedor-error">
-                <div th:if="${error}" class="alerta-error" th:text="${error}"></div>
-            </div>
-
-            <div class="contenedor-exito">
-                <div th:if="${exito}" class="alerta-exito" th:text="${exito}"></div>
-            </div>
-
-            <form class="formulario-inicio-sesion" th:action="@{/usuario/acceder}" method="post">
-
-                <!-- Grupo: Correo Electronico -->
-                <div class="formulario-grupo" id="grupo-correo">
-                    <label for="email" class="formulario-label">Correo Electrónico</label>
-                    <div class="formulario-grupo-input">
-                        <input type="email" class="formulario-input" name="email" id="correo"
-                            placeholder="correo@correo.com" required autocomplete="off">
-                    </div>
-                </div>
-
-                <!-- Grupo: Contraseña -->
-                <div class="formulario-grupo" id="grupo-password">
-                    <label for="contrasena" class="formulario-label">Contraseña</label>
-                    <div class="formulario-grupo-input">
-                        <input type="password" class="formulario-input" name="contrasena" id="password" required
-                            autocomplete="off" placeholder="Ingresá tu contraseña">
-                    </div>
-                </div>
-
-                <div class="contenedor-boton formulario-grupo mrt-30">
-                    <button type="submit" class="btn btn-dark"><img class="w25  mr-10" th:src="@{/iconos/felicidad.png}"
-                            alt="felicidad"> Ingresar</button>
-                </div>
-
-                <div class="contenedor-boton mrt-30">
-                    <a class="" th:href="@{/email/solicitarRestablecimiento}">¿Olvidaste la contraseña?</a>
-                </div>
-            </form>
+        <div class="contenedor-img-iniciarSesion">
+          <img class="img-iniciarSesion" th:src="@{/imagenes/iniciarSesion.png}" alt="login" />
         </div>
-    </main>
 
-    <!-- Footer -->
-    <div class="mrt-30" th:insert="~{usuario/templateUsuario.html::footer-user}"></div>
+        <div class="contenedor-error">
+          <div th:if="${error}" class="alerta-error" th:text="${error}"></div>
+        </div>
 
+        <div class="contenedor-exito">
+          <div th:if="${exito}" class="alerta-exito" th:text="${exito}"></div>
+        </div>
+
+        <div class="card border">
+
+          <form class="formulario-inicio-sesion mr30" th:action="@{/usuario/acceder}" method="post">
+            <!-- Grupo: Correo Electronico -->
+            <div class="formulario-grupo" id="grupo-correo">
+              <label for="email" class="formulario-label">Correo Electrónico</label>
+              <div class="formulario-grupo-input border">
+                <input type="email" class="formulario-input" name="email" id="correo" placeholder="correo@correo.com"
+                  required autocomplete="off" />
+              </div>
+            </div>
+
+            <!-- Grupo: Contraseña -->
+            <div class="formulario-grupo" id="grupo-password">
+              <label for="contrasena" class="formulario-label">Contraseña</label>
+              <div class="formulario-grupo-input border">
+                <input type="password" class="formulario-input" name="contrasena" id="password" required
+                  autocomplete="off" placeholder="Ingresá tu contraseña" />
+              </div>
+            </div>
+
+        </div>
+
+        <div class="contenedor-boton formulario-grupo mrt-30">
+          <button type="submit" class="btn btn-dark">
+            <img class="w25 mr-10" th:src="@{/iconos/felicidad.png}" alt="felicidad" />
+            Ingresar
+          </button>
+        </div>
+
+        <div class="contenedor-boton mrt-30">
+          <a class="black" th:href="@{/email/solicitarRestablecimiento}">¿Olvidaste la contraseña?</a>
+        </div>
+        <br>
+        </form>
+      </div>
+    </div>
+  </main>
+
+  <!-- Footer -->
+  <div class="mrt-30" th:insert="~{usuario/templateUsuario.html::footer-user}"></div>
 </body>
 
 </html>
